--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">                           
                             <h1 class="wow fadeInRight" data-wow-delay=".4s">I'm Mian <span class="id-color">Ammad</span> Bashir</h1>
-                            <p class="lead wow fadeInRight" data-wow-delay=".5s">Welcome to my website, as a data analyst, I have a passion for leveraging data to uncover insights and drive business decisions. With a strong background in data analysis, visualization, and statistics,
-                                I have a proven track record of delivering valuable insights and recommendations. Through my data-driven approach and attention to detail, I am committed to delivering accurate and actionable insights that drive real business results.</p>
+                            <p class="lead wow fadeInRight" data-wow-delay=".5s">Welcome to my website, I have a passion for leveraging data to uncover insights and drive business decisions. With a strong background in process automation, data analysis, visualization, and statistics,
+                                I have a proven track record of delivering valuable insights and recommendations in the emerging AI space.  My expertise spans the entire automation lifecycle: from meticulously mapping existing processes to identifying high-impact opportunities, and 
+                                finally, designing and integrating automation solutions that align with overarching business objectives.</p>
                             <div class="spacer-single"></div>
                             <a href="https://drive.google.com/file/d/1MNLEyWHp96C2P7xym93loN5WSE45Uxuj/view?usp=share_link" class="btn-custom light wow fadeInRight scoll-to" data-wow-delay=".6s" >Download CV</a>
                         </div>
 
-                        <div class="col-md-6 sm-hide"><blockquote class="text-light pull-right wow fadeInRight" data-wow-delay=".6s">Turning data into insights, insights into action.</blockquote></div>
+                        <div class="col-md-6 sm-hide"><blockquote class="text-light pull-right wow fadeInRight" data-wow-delay=".6s">Leveraging AI & Data for a Smarter Future.</blockquote></div>
                     </div>
                 </div>
             </section>
@@ -134,22 +135,24 @@
                             <ul class="d_timeline">
                                 <li class="d_timeline-item">
                                     <h3 class="d_timeline-title">Sep 2021 - current</h3>
-                                    <p class="d_timeline-text"><span class="d_title">Freelance Data Analyst</span>Worked with data from a variety of industries, including finance, healthcare and retail. In each of these projects, I was able to deliver valuable insights and recommendations.</p>
+                                    <p class="d_timeline-text"><span class="d_title">IT Contractor</span>Worked with local businesses, catering to their technology needs. My projects include creating custom AI tools & solutions, designing and maintaining workflow automations.</p>
                                 </li>
                                 <li class="d_timeline-item">
                                     <h3 class="d_timeline-title">Oct 2021 - Current</h3>
                                     <p class="d_timeline-text"><span class="d_title">Over-the-phone Interpreter<span>Language Line Solutions</span></span>Routinely provide interpreting services over the phone in real-time for individuals and groups from and into Urdu and Pashto.</p>
                                 </li>
                                 <li class="d_timeline-item">
-                                    <h3 class="d_timeline-title">May 2021 - current</h3>
-                                    <p class="d_timeline-text"><span class="d_title">Freelance Tutor</span>Tutor Highschool and College students in Mathematics, Physics and Chemistry</p>
+                                    <h3 class="d_timeline-title">May 2021 - Oct 2022</h3>
+                                    <p class="d_timeline-text"><span class="d_title">Tutor</span>Tutored Highschool, College & Freshman-year students in Mathematics, Physics and Chemistry</p>
                                 </li>
-                                <!--
                                 <li class="d_timeline-item">
-                                    <h3 class="d_timeline-title">Apr 2020 - Sep 2021</h3>
-                                    <p class="d_timeline-text"><span class="d_title">Grocery Store Clerk<span>Metro Food Basics</span></span></p>
+                                    <h3 class="d_timeline-title">Sep 2020 - Sep 2021</h3>
+                                    <p class="d_timeline-text"><span class="d_title">Help Desk & Administrative Assistant<span>PC Doctors</span></span>Level 1 & 2 tech support fixes, used bash and cli scripts to fix common issues</p>
                                 </li>
-                                -->
+                                <li class="d_timeline-item">
+                                    <h3 class="d_timeline-title">Feb 2020 - Aug 2020</h3>
+                                    <p class="d_timeline-text"><span class="d_title">Travel Break<span></span></span>Moved to Canada - self improvement & upskilling.</p>
+                                </li>
                                 <li class="d_timeline-item">
                                     <h3 class="d_timeline-title">May 2019 - Jan 2020</h3>
                                     <p class="d_timeline-text"><span class="d_title">IB DP Physics Teacher<span>Beaconhouse Newlands - Islamabad</span></span>Extensive experience teaching high school physics, including both traditional and advanced placement (AP) courses
@@ -187,13 +190,14 @@
                         </ul>
                     </div>
                     </div>
+                        </div>
                     <div class="spacer-50"></div>
                     <div class="row">
                         <div class="col-md-6">
-                            <h3 class="s_border">Data Science Skills</h3>
+                            <h3 class="s_border">Technical Skillset</h3>
                             <div class="skill-bar">
                                 <i class="fa fa-code id-color"></i>
-                                <h5 fa-fa>Python for Data Science</h5>
+                                <h5 fa-fa>Python</h5>
                                 <div class="de-progress">
                                     <div class="value"></div>
                                     <div class="progress-bar" data-value="80%"></div>
@@ -201,7 +205,15 @@
                             </div>
                             <div class="skill-bar">
                                 <i class="fa fa-database id-color"></i>
-                                <h5>My SQL for Data Analysis</h5>
+                                <h5>SQL</h5>
+                                <div class="de-progress">
+                                    <div class="value"></div>
+                                    <div class="progress-bar" data-value="80%"></div>
+                                </div>
+                            </div>
+                            <div class="skill-bar">
+                                <i class="fa fa-cogs id-color"></i>
+                                <h5>RPA: Zapier | Make (Integromat)</h5>
                                 <div class="de-progress">
                                     <div class="value"></div>
                                     <div class="progress-bar" data-value="80%"></div>
@@ -209,10 +221,10 @@
                             </div>
                             <div class="skill-bar">
                                 <i class="fa fa-area-chart id-color"></i>
-                                <h5>Power BI &amp; Data Visualization</h5>
+                                <h5>Power BI (DAX)</h5>
                                 <div class="de-progress">
                                     <div class="value"></div>
-                                    <div class="progress-bar" data-value="85%"></div>
+                                    <div class="progress-bar" data-value="75%"></div>
                                 </div>
                             </div>
                         </div>
